# emnlp2017

./: .gitignore  CMakeLists.txt  LICENSE  README.md
experiments/disc_spine/dptb/: run.sh
experiments/pos_dep/german/: run.sh
headrules/: collins
scripts/: extract_spines.py  pos_precision.py  ptb_size.py  spines_to_negra.py  split_dptb.py  stats.py
src/: activation_function.h  conll.h  decoder.h  dep_build_dict.cpp  dep_build_filter.cpp  dep_compute_attachment_probs.cpp  dep_decode_joint.cpp  dep_decode_pipeline.cpp  dep_train_parser.cpp  dep_train_tagger.cpp  dependency.cpp  dependency.h  graph.cpp  graph.h  graph_generator.h  lemon_inc.h  parser.cpp  probs.h  reduction.h  serialization.h  sgd.h  spine_build_dict.cpp  spine_build_filter.cpp  spine_compute_attachment_probs.cpp  spine_data.h  spine_decode_joint.cpp  spine_decode_pipeline.cpp  spine_probs.h  spine_train_parser.cpp  spine_train_tagger.cpp  spine_train_tagger_head.cpp  status.h  timer.h  train.cpp  utils.h  writer.h
src/decoder/: dual.h  primal.h  tagger.h
src/nn/: arc.h  biaffine_parser.h  head_tagger.h  nn.h  node.h  node2.h  parser.h  rnn.h  tagger.h
